--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ Levenshtein~=0.25.1
 numpy~=2.0.0
 openpyxl~=3.1.5
 pandas~=2.2.2
-pdfplumber
-pillow
+pdfplumber~=0.11.2
+pillow~=10.4.0
 pyinstaller~=6.9.0
 pyinstaller-hooks-contrib~=2024.7
 pip~=24.1.2
@@ -14,5 +14,3 @@ pytz~=2024.1
 rapidfuzz~=3.9.4
 setuptools~=65.5.1
 six~=1.16.0
-
-
