--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ pillow~=10.4.0
 pyinstaller~=6.9.0
 pyinstaller-hooks-contrib~=2024.7
 pip~=24.1.2
+PyMuPDF~=1.24.7
+PyMuPDFb~=1.24.6
 pytesseract~=0.3.10
 python-dateutil~=2.9.0.post0
 pytz~=2024.1
